[chromium]The focus of an input field inside an Iframe doesn't get cleared even though clearFocusedNode is called. https://bugs.webkit.org/show_bug.cgi?id=68162

Add a unit-test to check whether the focus of node is get cleared when clearFocusNode called.
This test check for focus of input node inside a frame after clear focus get called.
Patch by chandra shekar vallala <chandra.vallala@motorola.com> on 2011-09-17
Reviewed by Adam Barth.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::clearFocusedNode):
* tests/WebFrameTest.cpp:
(WebKit::TEST_F): Added a unit test to make sure that focus of the node is get cleared.
* tests/data/autofocus_input_field_iframe.html: Added.
* tests/data/iframe_clear_focused_node_test.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@95380 bbb929c8-8fbe-4397-9dbb-9b2b20218538