third_party/WebKit/Source/WebKit/chromium/src/WebViewImpl.cpp
@@ -1783,10 +1783,7 @@ void WebViewImpl::setInitialFocus(bool reverse)
 
 void WebViewImpl::clearFocusedNode()
 {
-    if (!m_page.get())
-        return;
-
-    RefPtr<Frame> frame = m_page->mainFrame();
+    RefPtr<Frame> frame = focusedWebCoreFrame();
     if (!frame.get())
         return;
 
